# PitchTwin-fuse

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  OVERVIEW.md  README.md  app.py  db.py  docker-compose.yml  export.py  git.worktree-manifest.json  llm_client.py  models.py  observability.py  opencode.json  orchestrator.py  pyproject.toml  requirements.txt  token_tracking.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  trivy.yml
.opencode/commands/: change.implement.md  change.specify.md  change.verify.md  git.commit.md  git.feature.md  git.publish.md  git.setup-ignore.md  git.validate.md  git.worktree-cleanup.md  git.worktree-list.md  levelup.implement.md  quick.implement.md  spec.analyze.md  (+11 more)
.specify/: extensions.yml  feature.json  init-options.json  integration.json
agents/: __init__.py  client_research_agent.py  combined_agent.py  debrief_agent.py  gap_agent.py  harness.py  matching_agent.py  persona_agent.py  profile_agent.py  pydantic_ai_setup.py  schemas.py  writer_agent.py
data/: position_1_snowflake_mvp.json  position_2_snowflake_etl.json  position_3_dreeze_ai_platform.json  position_4_gong_java_backend.json  position_5_bonterra_disbursement.json  positions_index.json  sample_brief.json  sample_profile.json
docs/: architecture-diagrams.md
evals/: README.md  conftest.py  harness.py  report.py  results.py  run.py  test_eval.py
orchestrator/: __init__.py  adapter.py  memory.py  workflow.py
spec/: spec.arch  spec.harness-brainstorm.md  spec.plan  spec.tasks  spec.verify
templates/: base.html  dashboard.html  debrief.html  debug_trace.html  new_profile.html  new_proposal.html  proposal.html  twin_chat.html
tests/: conftest.py  test_agents.py  test_error_handling.py  test_evals_meta.py  test_harness.py  test_integration.py  test_proposal_usage_persistence.py  test_token_tracking.py  test_trace_aggregation.py  test_workflow_engine.py
(+146 files in other folders)
