[project]
name = "pitchtwin-fuse"
version = "0.1.0"
description = "PitchTwin — Your CV, came to life."
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "groq==0.9.0",
    "openai>=1.0.0",
    "python-dotenv>=1.1.0",
    "pypdf==4.3.1",
    "python-docx==1.1.2",
    "pydantic==2.13.4",
    "logfire[flask]>=4.37.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "models", "db", "orchestrator", "llm_client", "app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]